# aiimage12334

./: .cursorignore  .dockerignore  .env  .env.development  .env.example  .env.production  .gitignore  CLAUDE.md  DEPLOY.md  README.md  check_user.py  index.html  package-lock.json  package.json  tailwind.config.ts  test_ai.py  test_fix.py  test_genai_proxy.py  test_local_fix.py  test_progress_realtime.py  test_v2_api.py  test_v2_image.py  testai.py  testai_proxy.py  testai_timing.py  vite.config.ts
.claude/: settings.local.json
backend/: .env  .env.example  ecosystem.config.cjs  init_db.py  migrate_add_elapsed_time.py  migrate_add_progress.py  migrate_db.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_api.py
backend/app/: auth.py  config.py  database.py  errors.py  main.py  models.py  schemas.py
backend/app/routes/: auth.py  generation.py  generation_v2.py
backend/app/services/: image_gen.py  image_gen_v2.py  prompt_template.py  prompt_template.py.backup  task_queue.py  websocket_manager.py
backend/tests/: __init__.py  test_websocket.py
deploy/: .dockerignore  .env  README.md  SERVICE_MANAGEMENT.md  TAURI_WINDOWS_BUILD_GUIDE.md  nginx.conf  nginx89.conf  whitebg.service
deploy/backend/: .env  .env.example  Dockerfile  aiimage-backend.service  deploy-systemctl.sh  docker-compose.yml
docs/: BACKEND_SCRIPT_USAGE.md  V2_Resolution_Implementation_Plan.md  V2接口测试文档.md  white_bg_prompt_optimization.md  任务管理机制分析与重构方案.md
openspec/: project.md
scripts/: cleanup_ports.py  clear_database.py  start_backend.bat  start_backend.sh  start_frontend.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: CreditsDisplay.tsx  EmptyState.tsx  (+9 more)
supabase/: config.toml
(+19 files in other folders)
